# gdeflate_dll

./: .gitignore  README.md
GDeflate/: CMakeLists.txt
GDeflate/GDeflateWrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
python_interface/: gdeflate.py  gdeflate_cli.py  test.txt_compressed  test.txt_decompressed  test_small.txt_compressed
